# clipboard_txt

./: CMakeLists.txt  README.md  clipboard_txt.cpp  clipboard_txt.h
.github/workflows/: c-cpp.yml
